--- a/zeppelin-web/src/index.html
+++ b/zeppelin-web/src/index.html
@@ -173,6 +173,8 @@ limitations under the License.
     <script src="bower_components/MathJax/MathJax.js"></script>
     <script src="bower_components/clipboard/dist/clipboard.js"></script>
     <script src="bower_components/ngclipboard/dist/ngclipboard.js"></script>
+    <script src="bower_components/headroom.js/dist/headroom.js"></script>
+    <script src="bower_components/headroom.js/dist/angular.headroom.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
   </body>
