login: Remove invalid attr in login

--- a/zeppelin-web/src/index.html
+++ b/zeppelin-web/src/index.html
@@ -89,7 +89,7 @@ limitations under the License.
     <div ng-controller="NoteImportCtrl as noteImportCtrl">
       <div id="note-import-container" ng-include src="'components/note-import/note-import.html'"></div>
     </div>
-    <div ng-controller="LoginCtrl as noteimportctrl">
+    <div ng-controller="LoginCtrl">
       <div id="login-container" ng-include src="'components/login/login.html'"></div>
     </div>
     <div ng-controller="RenameCtrl">
