--- a/zeppelin-web/src/index.html
+++ b/zeppelin-web/src/index.html
@@ -91,8 +91,8 @@ limitations under the License.
     <div ng-controller="LoginCtrl">
       <div id="login-container" ng-include src="'components/login/login.html'"></div>
     </div>
-    <div ng-controller="RenameCtrl">
-      <div ng-include src="'components/rename/rename.html'"></div>
+    <div ng-controller="NoteRenameCtrl">
+      <div ng-include src="'components/note-rename/note-rename.html'"></div>
     </div>
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
