implement folder permissions

--- a/zeppelin-web/src/index.html
+++ b/zeppelin-web/src/index.html
@@ -93,6 +93,9 @@ limitations under the License.
     <div ng-controller="NoteRenameCtrl">
       <div ng-include src="'components/note-rename/note-rename.html'"></div>
     </div>
+    <div ng-controller="FolderPermissionsCtrl">
+      <div ng-include src="'components/folder-permissions/folder-permissions.html'"></div>
+    </div>
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
